--- a/pixelsrushvr.html
+++ b/pixelsrushvr.html
@@ -5,7 +5,7 @@
     <title>Pixels Rush VR</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" class="ui" href="http://semantic-ui.com/dist/semantic.min.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="semantic.min.css">
   </head>
 
   <body style="background-image: url('pixelsrushvr.png'); background-size: cover; background-position-y: center; background-attachment: fixed">
