--- a/pixelsrushvr.html
+++ b/pixelsrushvr.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" class="ui" href="semantic.min.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="icon.min.css">
   </head>
 
   <body style="background-image: url('pixelsrushvr.png'); background-size: cover; background-position-y: center; background-attachment: fixed">
