Final try to deploy download icon\

--- a/pixelsrushvr.html
+++ b/pixelsrushvr.html
@@ -5,6 +5,7 @@
     <title>Pixels Rush VR</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" class="ui" href="font-awesome.min.css">
     <link rel="stylesheet" type="text/css" class="ui" href="semantic.min.css">
     <link rel="stylesheet" type="text/css" class="ui" href="icon.min.css">
   </head>
